V 0.17.3:
  - Fixed human readable byte conversion for negative numbers
V 0.17.2:
  - Added touch function
V 0.17.1:
  - Fixed byte string count conversion on decimal numbers
V 0.17.0:
  - Removed flask and created new project 'jerrycan'
V 0.16.0:
  - Made ReCaptcha also check on localhost and 127.0.0.1
V 0.15.2:
  - Added extra jinja variables to test framework
V 0.15.1:
  - Handles SMTP Authentication errors gracefully
V 0.15.0:
  - Now strips spaces from usernames during registration
  - Allows for more custom jinja variables
V 0.14.4:
  - Only log ActionExceptions when they are code >= 500
V 0.14.3:
  - Fixed flask model JSON behaviour when dealing with lists
V 0.14.2:
  - Fixed endless recursion issues in json representation
  - Fixed missing error logging in API
V 0.14.1:
  - Fixed issue with postgres variables
V 0.14.0:
  - Made __json__ method for ModelMixins automated
V 0.13.0:
  - Adjusted postgres variable names
V 0.12.1:
  - Changed file loggers to time-based rollover loggers
V 0.12.0:
  - Added type annotations to db model attributes
  - Made db model relations bi-directional
  - Fixed sentry logging behaviour for flask
  - Adjusted parameters provided to registration and password forgot emails
  - Now fails gracefully if database connection can't be established
  - Improved logging configuration for flask
V 0.11.0:
  - Log traceback in errors in flask framework
V 0.10.2:
  - Added more postgres variables to required variables for better backups
V 0.10.1:
  - Don't activate telegram when testing
V 0.10.0:
  - Added specification for environment variables in flask framework
  - Added telegram bot capabilities to flask framework
  - Added URL path capabilities to flask framework
  - Added environment variable dumping capabilities to flask framework
V 0.9.6:
  - Added domain name to flask config
V 0.9.5:
  - Enhanced flask logging
V 0.9.4:
  - Fixed enum handling in ModelMixin repr method
V 0.9.3:
  - Fixed flask API issues
V 0.9.2: