@@ -1,5 +1,6 @@
 V 0.17.3:
   - Fixed human readable byte conversion for negative numbers
+  - Add decimals option to human-readable unit conversion
 V 0.17.2:
   - Added touch function
 V 0.17.1:
